# SetAndNotes

./: .gitignore  README.md  pyproject.toml
docs/: reaper-notes.md  touchdesigner-bridge.md  touchdesigner-status.md  touchdesigner-v1-patch.md
docs/plans/: 2026-03-20-setandnotes-implementation-plan.md  implementation-notes.md
src/setandnotes/: __init__.py  __main__.py  app.py  main_window.py
src/setandnotes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/setandnotes/models/: library.py  rehearsal_notes.py  setlist_table_model.py  song.py  version.py
src/setandnotes/services/: app_settings.py  file_classify.py  file_scan.py  ltc_decode.py  media_probe.py  persistence.py  project_export.py  reaper_marker_stream.py  reaper_notes.py  (+9 more)
tests/: test_app.py
tests/models/: test_library_models.py  test_rehearsal_notes.py  test_setlist_table_model.py
tests/services/: test_app_settings.py  test_export_pipeline.py  test_file_classify.py  test_file_scan.py  test_import_pipeline.py  test_ltc_decode.py  test_persistence.py  test_project_export.py  test_reaper_marker_stream.py  test_reaper_notes.py  test_song_match.py  test_td_bridge_server.py  test_td_capture_controller.py  test_touchdesigner_manifest.py  test_touchdesigner_render_import.py  test_web_note_capture.py  test_web_note_server.py  test_web_note_users.py
tests/ui/: test_export_root_selection.py  test_import_workflow.py  test_library_wiring.py  test_main_window.py  test_notes_page.py  test_project_workflow.py  test_setlist_order_dialog.py  test_version_management.py
(+17 files in other folders)
